# WhiteBot

./: .env.example  .flake8  .gitignore  .main.py.swp  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE (ko)  README.md  constants.py  database.db  ffmpeg-1.4-py3-none-any.whl  main.py  pyproject.toml  renovate.json  requirements.txt
.github/ISSUE_TEMPLATE/: 버그-제보.md
.github/workflows/: lint.yml
commands/: __init__.py  economy.py  etc.py  manage.py  music.py  playing.py
ffmpeg-4.4-essentials_build/: README.txt
functions/: advanced_caculator.py  calc.py  code.py  contests.py  covid.py  currency.py  etc.py  help.py  holjjac.py  manage.py  music.py  playing.py  spellcheck.py  translate.py  urlshortener.py  vote.py  weather.py  white_currency.py  youtube.py
utils/: commands.py  database.py  koreanbots.py  logger.py  logging.py  utils.py  whitebot.py
utils/hanspell/: constants.py  response.py  spell_checker.py
