[tool.poetry]
name = "repl_python3_WhiteBot"
version = "0.1.0"
description = ""
authors = ["Whitetiger0423 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.7.0"
aiohttp = "^3.7.4"
aiosqlite = "^0.17.0"
async-timeout = "^3.0.1"
discord = "^1.7.3"
koreanbots = "^1.1.3"
discord-py-slash-command = "^3.0.1"
discord-py-interactions = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
